syntax = "proto3";

package ci.monitoring.infra_close;
option go_package = "a.yandex-team.ru/ci/tasklet/registry/common/monitoring/infra_close/proto;infraclosepb";

import "tasklet/api/tasklet.proto";
import "tasklet/services/ci/proto/ci.proto";
import "tasklet/services/yav/proto/yav.proto";
import "ci/tasklet/common/proto/service.proto";
import "ci/tasklet/registry/common/monitoring/infra_create/proto/infra_create.proto";

message Config {
    string yav_infra_oauth_token_key = 1;  // default "infra.token"
}

message Input {
    infra_create.InfraIdentifier infra_identifier = 1;
    Config config = 2;
    ci.TaskletContext context = 3;
}

message Output {
}

message InfraCloseContext {
    option (tasklet.context) = true;

    ci.CiService ci = 1 [(tasklet.inject) = true];
    yav_service.YavService yav = 2 [(tasklet.inject) = true];
}

message InfraClose {
    option (tasklet.tasklet_interface) = true;

    InfraCloseContext ctx = 1;
    Input input = 2 [(tasklet.input) = true];
    Output output = 3 [(tasklet.output) = true];
}
